# snowMAUS

./: LICENSE.txt  README.md  pyproject.toml  snowmaus.py
tutorial/: tutorial__Rosalia_dataset.ipynb
